Details
-
Bug
-
Status: Closed
-
Blocker
-
Resolution: Fixed
-
0.6
-
None
Description
Email from prattrs@adobe.com on user list states:
> when I enable auth=yes, I get the following:
>
> 2009-12-16 18:33:18 error qpid/amqp_0_10/SessionHandler.cpp:97: Execution exception: unauthorized-access: authorised user id : prattrs@QPID but user id in message decla
> red as prattrs (qpid/broker/SemanticState.cpp:435)
I believe this is a result of the change brought in by r819819 to address QPID-2129.