This is a fix for QPID-2290 and the proper fix for QPID-2175 If the client doesn't add a domain to the userID supplied in the message, the broker will add the default realm before performing the userID check.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@892123 13f79535-47bb-0310-9956-ffa450edef68